hphp/test/zend/good/ext/exif/tests/exif007.php
<?php
var_dump(exif_read_data(dirname(__FILE__).'/image007.jpg'));
?>