hphp/test/zend/bad/ext/mbstring/tests/ini_language.php
<?php
var_dump(ini_get('mbstring.internal_encoding'));
var_dump(mb_internal_encoding());
?>